Tue Dec 27 10:06:28 CET 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 6.0.7 released.

Wed Dec 21 11:25:49 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * tests/Task_Wait_Test.cpp:
          Fixed compile issue on Solaris 10.

Wed Dec 21 09:41:54 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * examples/Timer_Queue/Reactor_Timer_Queue_Test.cpp:

          Added timer queue reset on global reactor instance.

Tue Dec 20 15:43:39 UTC 2011  Steve Huston  <shuston@riverace.com>

        * tests/Task_Wait_Test.cpp:
        * tests/tests.mpc:
        * tests/run_test.lst:
          New test program that tests the ACE_Thread_Manager::wait() from a
          called-back ACE_Task::close() on thread exit.

Tue Dec 20 15:36:24 UTC 2011  Steve Huston  <shuston@riverace.com>

        * ace/Thread.inl (disablecancel): Correct size pased to memset.
        * ace/Thread_Manager.cpp (ACE_Thread_Descriptor::terminate): Don't
          dereference potentially invalid pointer.

          Resolves Coverity warnings.

Mon Dec 19 19:00:07 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/bczar/bczar.html:
          Added another package

Mon Dec 19 13:28:16 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * ace/Abstract_Timer_Queue.h:
        * ace/Timer_Hash_T.h:
        * ace/Timer_Hash_T.cpp:
        * ace/Timer_Heap_T.h:
        * ace/Timer_Heap_T.cpp:
        * ace/Timer_List_T.h:
        * ace/Timer_List_T.cpp:
        * ace/Timer_Queue_Adapters.inl:
        * ace/Timer_Queue_Adapters.cpp:
        * ace/Timer_Wheel_T.h:
        * ace/Timer_Wheel_T.cpp:

          Added close() method.

        * ace/Dev_Poll_Reactor.cpp:
        * ace/Proactor.cpp:
        * ace/Select_Reactor_T.cpp:
        * ace/WFMO_Reactor.cpp:

          Implemented support for timer queue close ().

        The rationale for these changes is that when using reactors with
        user defined timer queues the reactor does not delete the timer queue